4_k8s/20-moodle/5-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: moodle
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kulturnetzd.ar.olumpos.net`)
    kind: Rule
    # middlewares:
      # - name: redirect-to-https
        # namespace: default
    services:
    - name: kulturnetzd-moodle
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kulturnetzd
  name: moodle-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kulturnetzd.ar.olumpos.net`)
    kind: Rule
    services:
    - name: kulturnetzd-moodle
      port: 80
  tls:
    certResolver: letsencrypt
